--- a/SMARTHOMENEWAPP/app.json
+++ b/SMARTHOMENEWAPP/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "SMARTHOMENEW",
-    "slug": "SMARTHOMENEW",
+    "name": "SMARTHOMENEWAPP",
+    "slug": "SMARTHOMENEWAPP",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
